--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile files('libs/universal-image-loader-1.9.3.jar')
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.zhy:okhttputils:2.6.2'
+    compile 'com.belerweb:pinyin4j:2.5.0'
 }
